<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MovieListFragment">

    <fragment
        android:id="@+id/MovieListFragment"
        android:name="com.aap.ro.movies.ui.movielist.MovieListFragment"
        android:label="@string/movie_list_fragment_label"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"

            app:destination="@id/movieDetailFragment" />
        <action
            android:id="@+id/action_MovieListFragment_to_addMovieFragment"
            app:destination="@id/addMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.aap.ro.movies.ui.detail.MovieDetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_movie_detail">
        <!--suppress NavigationFile -->
        <argument
            android:name="movieId"
            app:argType="integer"
            android:defaultValue="-1"/>
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MovieListFragment" />
        <action
            android:id="@+id/action_movieDetailFragment_to_addMovieFragment"
            app:destination="@id/addMovieFragment" />
    </fragment>

    <fragment
        android:id="@+id/addMovieFragment"
        android:name="com.aap.ro.movies.ui.addmovie.AddEditMovieFragment"
        android:label="@string/add_movie"
        tools:layout="@layout/fragment_add_movie" >
         <!--suppress NavigationFile -->

    </fragment>

    <dialog android:id="@+id/addGenreDialog"
        android:name="com.aap.ro.movies.ui.addmovie.AddGenreDialog"
        android:label="AddGenreDialog"
        >
        <action
            android:id="@+id/action_addGenreDialog_to_addMovieFragment"
            app:destination="@id/addMovieFragment" />
    </dialog>


    <dialog android:id="@+id/addArtistDialog"
        android:name="com.aap.ro.movies.ui.addmovie.AddArtistDialog"
        android:label="AddGenreDialog"
        >
        <action
            android:id="@+id/action_addArtistDialog_to_addMovieFragment"
            app:destination="@id/addMovieFragment" />
    </dialog>

</navigation>